--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -57,11 +57,11 @@
     "description": "middle"
   },
   "settingNameSuppressionKey": {
-    "message": "Gesture suppression key",
+    "message": "禁用手勢按鍵",
     "description": "Gesture suppression key"
   },
   "settingNameNoneKey": {
-    "message": "None",
+    "message": "無",
     "description": "None"
   },
   "settingNameAltKey": {
@@ -172,7 +172,7 @@
     "description": "The mouse button which will trigger the gesture."
   },
   "settingDescriptionSuppressionKey": {
-    "message": "Disables the mouse gesture if the key is pressed.",
+    "message": "按住該按鍵時，停用滑鼠手勢",
     "description": "Disables the mouse gesture if the key is pressed."
   },
   "settingDescriptionDistanceThreshold": {
@@ -221,88 +221,88 @@
   },
 
   "settingNameRemoveTabFocus": {
-    "message": "Focus tab",
+    "message": "前景分頁",
     "description": "Focus tab"
   },
   "settingNameRemoveTabFocusDefault": {
-    "message": "default",
+    "message": "預設",
     "description": "default"
   },
   "settingNameRemoveTabFocusPrevious": {
-    "message": "previous",
+    "message": "上一個",
     "description": "previous"
   },
   "settingNameRemoveTabFocusRight": {
-    "message": "right",
+    "message": "右側",
     "description": "right"
   },
   "settingNameRemoveTabFocusLeft": {
-    "message": "left",
+    "message": "左側",
     "description": "left"
   },
   "settingNameNewTabPosition": {
-    "message": "Tab position",
+    "message": "分頁位置",
     "description": "Tab position"
   },
   "settingNameNewTabPositionDefault": {
-    "message": "default",
+    "message": "預設",
     "description": "default"
   },
   "settingNameNewTabPositionBefore": {
-    "message": "before",
+    "message": "之前",
     "description": "before"
   },
   "settingNameNewTabPositionAfter": {
-    "message": "after",
+    "message": "之後",
     "description": "after"
   },
   "settingNameZoomStep": {
-    "message": "Zoom step",
+    "message": "縮放步階",
     "description": "Zoom step"
   },
   "settingNameHomepageURL": {
-    "message": "Homepage URL",
+    "message": "首頁網址",
     "description": "Homepage URL"
   },
   "settingNameScrollDuration": {
-    "message": "Scroll duration",
+    "message": "滑動用時",
     "description": "Scroll duration"
   },
   "settingNameNewTabOnEmptyLink": {
-    "message": "Open empty tab",
+    "message": "開啟空分頁",
     "description": "Open empty tab"
   },
   "settingNameSearchEngineURL": {
-    "message": "Search engine URL",
+    "message": "搜尋引擎網址",
     "description": "Search engine URL"
   },
 
   "settingDescriptionScrollDuration": {
-    "message": "Duration in milliseconds for scroll top/bottom.",
+    "message": "使用多少時間滑動到頁面頂部/底部，時間單位為毫秒",
     "description": "Duration in milliseconds for scroll top/bottom."
   },
   "settingDescriptionScrollPageDuration": {
-    "message": "Duration in milliseconds for scroll page up/down.",
+    "message": "使用多少時間向上/下滑動頁面，時間單位為毫秒",
     "description": "Duration in milliseconds for scroll page up/down."
   },
   "settingDescriptionNewTabOnEmptyLink": {
-    "message": "Determines if an empty tab should be opened if no URL was selected.",
+    "message": "決定沒有選取任何網址時，是否要開啟空分頁",
     "description": "Determines if an empty tab should be opened if no URL was selected."
   },
   "settingDescriptionSearchEngineURL": {
-    "message": "The URL to query a search by appending the search text to the end.",
+    "message": "進行搜尋時所使用的網址，關鍵字將添加於末端",
     "description": "The URL to query a search by appending the search text to the end."
   },
   "settingDescriptionRemoveTabFocus": {
-    "message": "Defines which tab should gain focus.",
+    "message": "設定關閉分頁後，要切換至哪一邊的分頁",
     "description": "Defines which tab should gain focus."
   },
   "settingDescriptionNewTabPosition": {
-    "message": "Defines where the newly created tab should be inserted.",
+    "message": "設定新分頁將放置在哪一邊",
     "description": "Defines where the newly created tab should be inserted."
   },
   "settingDescriptionZoomStep": {
-    "message": "The zoom in/out step in percentage. If left blank, the default zoom levels are used.",
+    "message": "以百分比為單位的放縮步階，如果留白將使用預設的縮放級別",
     "description": "The zoom in/out step in percentage. If left blank, the default zoom levels are used."
   },
 
@@ -448,7 +448,7 @@
     "Name": "Link to background tab"
   },
   "actionNameSearchSelection": {
-    "message": "搜尋選擇的文字",
+    "message": "搜尋選取的文字",
     "description": "Search selected text"
   },
   "actionNameRemoveRight": {
@@ -476,27 +476,27 @@
     "description": "Print preview"
   },
   "actionNameOpenHomepage": {
-    "message": "Open homepage",
+    "message": "開啟首頁",
     "description": "Open homepage"
   },
   "actionNameLinkToBookmark": {
-    "message": "Link to bookmark",
+    "message": "將網址儲存為書籤",
     "description": "Link to bookmark"
   },
   "actionNameSaveScreenshot": {
-    "message": "Save Screenshot",
+    "message": "儲存畫面截圖",
     "description": "Save Screenshot"
   },
   "actionNameCopyTabURL": {
-    "message": "Copy Tab URL",
+    "message": "複製分頁網址",
     "description": "Copy Tab URL"
   },
   "actionNameCopyTextSelection": {
-    "message": "Copy Text Selection",
+    "message": "複製選取的文字",
     "description": "Copy Text Selection"
   },
   "actionNameCopyImage": {
-    "message": "Copy Image",
+    "message": "複製圖片",
     "description": "Copy Image"
   },
 
@@ -625,15 +625,15 @@
     "Name": "Opens the image, where the gesture started, in a new tab."
   },
   "actionDescriptionLinkToForegroundTab": {
-    "message": "在一個前景的新分頁開啟選擇的鏈結或手勢起點的鏈結",
+    "message": "在一個前景的新分頁開啟選取的鏈結或手勢起點的鏈結",
     "Name": "Opens either a selected link, or the link where the gesture started, in a new foreground tab."
   },
   "actionDescriptionLinkToBackgroundTab": {
-    "message": "在一個背景的新分頁開啟選擇的鏈結或手勢起點的鏈結",
+    "message": "在一個背景的新分頁開啟選取的鏈結或手勢起點的鏈結",
     "Name": "Opens either a selected link, or the link where the gesture started, in a new background tab."
   },
   "actionDescriptionSearchSelection": {
-    "message": "網絡搜尋選中的文字",
+    "message": "網絡搜尋選取的文字",
     "description": "Starts a web search of the selected text."
   },
   "actionDescriptionRemoveRight": {
@@ -661,27 +661,27 @@
     "description": "Opens the print preview of the current page."
   },
   "actionDescriptionOpenHomepage": {
-    "message": "Works like the homepage button.",
+    "message": "像首頁按鈕一樣運作",
     "description": "Works like the homepage button."
   },
   "actionDescriptionLinkToBookmark": {
-    "message": "Saves either a selected link, or the link where the gesture started, as a bookmark.",
+    "message": "將選取的網址或手勢起點上的網址儲存為書籤",
     "description": "Saves either a selected link, or the link where the gesture started, as a bookmark."
   },
   "actionDescriptionSaveScreenshot": {
-    "message": "Saves the current visible website area as an image.",
+    "message": "儲存現在頁面的可視區域為圖片",
     "description": "Saves the current visible website area as an image."
   },
   "actionDescriptionCopyTabURL": {
-    "message": "Copies the URL of the current tab to clipboard.",
+    "message": "複製現在分頁的網址到剪貼板",
     "description": "Copies the URL of the current tab to clipboard."
   },
   "actionDescriptionCopyTextSelection": {
-    "message": "Copies the current text selection to clipboard.",
+    "message": "複製選取的文字到剪貼板",
     "description": "Copies the current text selection to clipboard."
   },
   "actionDescriptionCopyImage": {
-    "message": "Copies the image, where the gesture started, to clipboard.",
+    "message": "複製圖片到剪貼板 (手勢起點上的圖片)",
     "description": "Copies the image, where the gesture started, to clipboard."
   },
 
@@ -756,15 +756,15 @@
     }
   },
   "aboutBackup": {
-    "message": "Backup",
+    "message": "備份",
     "description": "Backup"
   },
   "aboutRestore": {
-    "message": "Restore",
+    "message": "還原",
     "description": "Restore"
   },
   "aboutReset": {
-    "message": "Reset",
+    "message": "重置",
     "description": "Reset"
   },
 
@@ -779,11 +779,11 @@
     }
   },
   "aboutRestoreNotificationWrongFile": {
-    "message": "The selected file does not match the required file type.",
+    "message": "選取的檔案格式並不符合，無法進行還原",
     "description": "The selected file does not match the required file type."
   },
   "aboutResetNotificationConfirm": {
-    "message": "All settings including gestures are reset. This cannot be undone!",
+    "message": "所有設定包括手勢都將會被重置，並且無法撤銷操作!",
     "description": "All settings including gestures are reset. This cannot be undone!"
   },
   "aboutLicense": {
