fixed translation files

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -399,39 +399,39 @@
   },
   "actionNameMaximize": {
     "message": "Maximiere Fenster",
-    "Name": "Maximize window"
+    "description": "Maximize window"
   },
   "actionNameMinimize": {
     "message": "Minimiere Fenster",
-    "Name": "Minimize window"
+    "description": "Minimize window"
   },
   "actionNameFullscreen": {
     "message": "Vollbild umschalten",
-    "Name": "Toggle full screen"
+    "description": "Toggle full screen"
   },
   "actionNameNewWindow": {
     "message": "Neues Fenster",
-    "Name": "New window"
+    "description": "New window"
   },
   "actionNameNewPrivateWindow": {
     "message": "Neues privates Fenster",
-    "Name": "New private window"
+    "description": "New private window"
   },
   "actionNameTabToWindow": {
     "message": "Tab zu Fenster",
-    "Name": "Tab to window"
+    "description": "Tab to window"
   },
   "actionNameCloseWindow": {
     "message": "Fenster schließen",
-    "Name": "Close window"
+    "description": "Close window"
   },
   "actionNameReloadAll": {
     "message": "Alle neu laden",
-    "Name": "Reloads all"
+    "description": "Reloads all"
   },
   "actionNameReloadAllCaches": {
     "message": "Alle Caches neu laden",
-    "Name": "Reloads all caches"
+    "description": "Reloads all caches"
   },
   "actionNameURLLevelUp": {
     "message": "URL-Hierarchie hoch",
@@ -439,15 +439,15 @@
   },
   "actionNameImageToTab": {
     "message": "Bild zu Tab",
-    "Name": "Image to tab"
+    "description": "Image to tab"
   },
   "actionNameLinkToForegroundTab": {
     "message": "Link zu Vordergrund Tab",
-    "Name": "Link to foreground tab"
+    "description": "Link to foreground tab"
   },
   "actionNameLinkToBackgroundTab": {
     "message": "Link zu Hintergrund Tab",
-    "Name": "Link to background tab"
+    "description": "Link to background tab"
   },
   "actionNameSearchSelection": {
     "message": "Suche ausgewählten Text",
@@ -624,15 +624,15 @@
   },
   "actionDescriptionImageToTab": {
     "message": "Öffnet das Bild wo die Geste began in einem neuen Tab.",
-    "Name": "Opens the image, where the gesture started, in a new tab."
+    "description": "Opens the image, where the gesture started, in a new tab."
   },
   "actionDescriptionLinkToForegroundTab": {
     "message": "Öffnet entweder einen ausgewählten Link, oder den Link wo die Geste begann, in einem neuen Vordergrund-Tab.",
-    "Name": "Opens either a selected link, or the link where the gesture started, in a new foreground tab."
+    "description": "Opens either a selected link, or the link where the gesture started, in a new foreground tab."
   },
   "actionDescriptionLinkToBackgroundTab": {
     "message": "Öffnet entweder einen ausgewählten Link, oder den Link wo die Geste begann, in einem neuen Hintergrund-Tab.",
-    "Name": "Opens either a selected link, or the link where the gesture started, in a new background tab."
+    "description": "Opens either a selected link, or the link where the gesture started, in a new background tab."
   },
   "actionDescriptionSearchSelection": {
     "message": "Startet eine Websuche des ausgewählten Textes.",
