--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -399,39 +399,39 @@
   },
   "actionNameMaximize": {
     "message": "Maximize window",
-    "Name": "Maximize window"
+    "description": "Maximize window"
   },
   "actionNameMinimize": {
     "message": "Minimize window",
-    "Name": "Minimize window"
+    "description": "Minimize window"
   },
   "actionNameFullscreen": {
     "message": "Toggle full screen",
-    "Name": "Toggle full screen"
+    "description": "Toggle full screen"
   },
   "actionNameNewWindow": {
     "message": "New window",
-    "Name": "New window"
+    "description": "New window"
   },
   "actionNameNewPrivateWindow": {
     "message": "New private window",
-    "Name": "New private window"
+    "description": "New private window"
   },
   "actionNameTabToWindow": {
     "message": "Tab to window",
-    "Name": "Tab to window"
+    "description": "Tab to window"
   },
   "actionNameCloseWindow": {
     "message": "Close window",
-    "Name": "Close window"
+    "description": "Close window"
   },
   "actionNameReloadAll": {
     "message": "Reload all",
-    "Name": "Reloads all"
+    "description": "Reloads all"
   },
   "actionNameReloadAllCaches": {
     "message": "Reloads all caches",
-    "Name": "Reloads all caches"
+    "description": "Reloads all caches"
   },
   "actionNameURLLevelUp": {
     "message": "URL hierarchy up",
@@ -439,15 +439,15 @@
   },
   "actionNameImageToTab": {
     "message": "Image to tab",
-    "Name": "Image to tab"
+    "description": "Image to tab"
   },
   "actionNameLinkToForegroundTab": {
     "message": "Link to foreground tab",
-    "Name": "Link to foreground tab"
+    "description": "Link to foreground tab"
   },
   "actionNameLinkToBackgroundTab": {
     "message": "Link to background tab",
-    "Name": "Link to background tab"
+    "description": "Link to background tab"
   },
   "actionNameSearchSelection": {
     "message": "Search selected text",
@@ -624,15 +624,15 @@
   },
   "actionDescriptionImageToTab": {
     "message": "Opens the image, where the gesture started, in a new tab.",
-    "Name": "Opens the image, where the gesture started, in a new tab."
+    "description": "Opens the image, where the gesture started, in a new tab."
   },
   "actionDescriptionLinkToForegroundTab": {
     "message": "Opens either a selected link, or the link where the gesture started, in a new foreground tab.",
-    "Name": "Opens either a selected link, or the link where the gesture started, in a new foreground tab."
+    "description": "Opens either a selected link, or the link where the gesture started, in a new foreground tab."
   },
   "actionDescriptionLinkToBackgroundTab": {
     "message": "Opens either a selected link, or the link where the gesture started, in a new background tab.",
-    "Name": "Opens either a selected link, or the link where the gesture started, in a new background tab."
+    "description": "Opens either a selected link, or the link where the gesture started, in a new background tab."
   },
   "actionDescriptionSearchSelection": {
     "message": "Starts a web search of the selected text.",
