minor fixes & clean up

--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -580,7 +580,7 @@
   },
   "actionDescriptionPrevious": {
     "message": "Přepne na panel vlevo od aktuálního panelu.",
-    "description": "Switches to the vlevo tab of the current tab."
+    "description": "Switches to the left tab of the current tab."
   },
   "actionDescriptionMaximize": {
     "message": "Maximalizuje aktuální okno.",
