--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -194,8 +194,8 @@
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
   "settingDescriptionTraceGrowth": {
-    "message": "The amount of pixels that the line will grow until the maximum line width. No growth if it is set equal to the line width.",
-    "description": "Die Anzahl der Pixel, die die Linie bis zur maximalen Linienbreite wachsen wird. Kein Wachstum, wenn es gleich der Linienbreite gesetzt ist."
+    "message": "Die Anzahl der Pixel, die die Linie bis zur maximalen Linienbreite wachsen wird. Kein Wachstum, wenn es gleich der Linienbreite gesetzt ist.",
+    "description": "The amount of pixels that the line will grow until the maximum line width. No growth if it is set equal to the line width."
   },
   "settingDescriptionDisplayAction": {
     "message": "Zeigt eine zur aktuellen Geste passende Aktion an falls verfügbar.",
@@ -660,7 +660,7 @@
   },
   "actionDescriptionPrintPreview": {
     "message": "Öffnet die Druckvorschau der aktuellen Seite.",
-    "description": "Opens the print preview of the current tab."
+    "description": "Opens the print preview of the current page."
   },
   "actionDescriptionOpenHomepage": {
     "message": "Funktioniert wie der Homepage-Button.",
