fixed minor spelling mistakes

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -226,8 +226,8 @@
     "description": "Accepts every CSS Unit like: em, px, pt, %, vh etc."
   },
   "settingDescriptionDisplayDirections": {
-    "message": "Display the encoding of the the gesture as arrows at the bottom of the screen.",
-    "description": "Display the encoding of the the gesture as arrows at the bottom of the screen."
+    "message": "Displays the encoding of the gesture as arrows at the bottom of the screen.",
+    "description": "Displays the encoding of the gesture as arrows at the bottom of the screen."
   },
   "settingDescriptionDirectionsFontSize": {
     "message": "Accepts every CSS Unit like: em, px, pt, %, vh etc.",
@@ -447,11 +447,11 @@
   },
   "actionNameReloadAll": {
     "message": "Reload all",
-    "description": "Reloads all"
+    "description": "Reload all"
   },
   "actionNameReloadAllCaches": {
-    "message": "Reloads all caches",
-    "description": "Reloads all caches"
+    "message": "Reload all caches",
+    "description": "Reload all caches"
   },
   "actionNameURLLevelUp": {
     "message": "URL hierarchy up",
@@ -486,8 +486,8 @@
     "description": "Remove other tabs"
   },
   "actionNameSaveAsPDF": {
-    "message": "Saves as PDF",
-    "description": "Saves as PDF"
+    "message": "Save as PDF",
+    "description": "Save as PDF"
   },
   "actionNamePrint": {
     "message": "Print",
@@ -506,20 +506,20 @@
     "description": "Link to bookmark"
   },
   "actionNameSaveScreenshot": {
-    "message": "Save Screenshot",
-    "description": "Save Screenshot"
+    "message": "Save screenshot",
+    "description": "Save screenshot"
   },
   "actionNameCopyTabURL": {
-    "message": "Copy Tab URL",
-    "description": "Copy Tab URL"
+    "message": "Copy tab URL",
+    "description": "Copy tab URL"
   },
   "actionNameCopyTextSelection": {
-    "message": "Copy Text Selection",
-    "description": "Copy Text Selection"
+    "message": "Copy text selection",
+    "description": "Copy text selection"
   },
   "actionNameCopyImage": {
-    "message": "Copy Image",
-    "description": "Copy Image"
+    "message": "Copy image",
+    "description": "Copy image"
   },
 
   "actionDescriptionBookmark": {
