--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -294,9 +294,9 @@
     "message": "Search engine URL",
     "description": "Search engine URL"
   },
-  "settingNameSearchInBackgroundTab": {
-    "message": "Search in background",
-    "description": "Search in background"
+  "settingNameFocusSearchResult": {
+    "message": "Focus search result",
+    "description": "Focus search result"
   },
 
   "settingDescriptionScrollDuration": {
@@ -315,9 +315,9 @@
     "message": "The URL to query a search by appending the search text to the end.",
     "description": "The URL to query a search by appending the search text to the end."
   },
-  "settingDescriptionSearchInBackgroundTab": {
-    "message": "Defines if the search result should not gain focus.",
-    "description": "Defines if the search result should not gain focus."
+  "settingDescriptionFocusSearchResult": {
+    "message": "Defines if the search result should gain focus or not.",
+    "description": "Defines if the search result should gain focus or not."
   },
   "settingDescriptionRemoveTabFocus": {
     "message": "Defines which tab should gain focus.",
