added 4 new actions
- ImageToCurrentTab
- ImageToBackgroundTab
- SaveImageAs
- SaveImageNow

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -461,6 +461,22 @@
     "message": "Image to tab",
     "description": "Image to tab"
   },
+  "actionNameImageToCurrentTab": {
+    "message": "Image to current tab",
+    "description": "Image to current tab"
+  },
+  "actionNameImageToBackgroundTab": {
+    "message": "Image to background tab",
+    "description": "Image to background tab"
+  },
+  "actionNameSaveImageAs": {
+    "message": "Save image as",
+    "description": "Save image as"
+  }, 
+  "actionNameSaveImageNow": {
+    "message": "Save image now",
+    "description": "Save image now"
+  },
   "actionNameLinkToForegroundTab": {
     "message": "Link to foreground tab",
     "description": "Link to foreground tab"
