add new action "OpenPageSourceCode"

--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -523,6 +523,10 @@
     "message": "Kopírovat obrázek",
     "description": "Copy image"
   },
+  "actionNameOpenPageSourceCode": {
+    "message": "Zdrojový kód",
+    "description": "Zobrazí zdrojový kód stránky"
+  },
   "actionDescriptionBookmark": {
     "message": "Přidá nebo odebere záložku.",
     "description": "Adds or removes a bookmark."
@@ -714,6 +718,10 @@
   "actionDescriptionCopyImage": {
     "message": "Zkopíruje do schránky obrázek, na kterém gesto začalo.",
     "description": "Copies the image, where the gesture started, to clipboard."
+  },
+  "actionDescriptionOpenPageSourceCode": {
+    "message": "Zobrazí zdrojový kód stránky.",
+    "description": "Zobrazí zdrojový kód stránky."
   },
   "extraNameRockerActive": {
     "message": "Houpací gesta",
