--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -533,7 +533,10 @@
     "message": "Copy image",
     "description": "Copy image"
   },
-
+  "actionNameOpenPageSourceCode": {
+    "message": "Source code",
+    "description": "Show page source code"
+  },
   "actionDescriptionBookmark": {
     "message": "Adds or removes a bookmark.",
     "description": "Adds or removes a bookmark."
@@ -726,7 +729,10 @@
     "message": "Copies the image, where the gesture started, to clipboard.",
     "description": "Copies the image, where the gesture started, to clipboard."
   },
-
+  "actionDescriptionOpenPageSourceCode": {
+    "message": "Open new tab with source code of page.",
+    "description": "Open new tab with source code of page."
+  },
   "extraNameRockerActive": {
     "message": "Rocker gesture",
     "description": "Rocker gesture"
