--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -573,7 +573,10 @@
     "message": "Copy image",
     "description": "Copy image"
   },
-
+  "actionNameViewPageSourceCode": {
+    "message": "View page source",
+    "description": "View page source"
+  },
   "actionDescriptionBookmark": {
     "message": "Adds or removes a bookmark.",
     "description": "Adds or removes a bookmark."
@@ -790,7 +793,10 @@
     "message": "Copies the image, where the gesture started, to clipboard.",
     "description": "Copies the image, where the gesture started, to clipboard."
   },
-
+  "actionDescriptionViewPageSourceCode": {
+    "message": "Opens a new tab containing the source code of the page.",
+    "description": "Opens a new tab containing the source code of the page."
+  },
   "extraNameRockerActive": {
     "message": "Rocker gesture",
     "description": "Rocker gesture"
