Added a new setting for ImageToTab

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -290,6 +290,10 @@
     "message": "Open empty tab",
     "description": "Open empty tab"
   },
+  "settingNameImageToTabBackground": {
+    "message": "Open image in a background tab",
+    "description": "Open image in a background tab"
+  },
   "settingNameRemovePinnedTabs": {
     "message": "Remove pinned tabs",
     "description": "Remove pinned tabs"
@@ -318,6 +322,10 @@
   "settingDescriptionNewTabOnEmptyLink": {
     "message": "Determines if an empty tab should be opened if no URL was selected.",
     "description": "Determines if an empty tab should be opened if no URL was selected."
+  },
+  "settingDescriptionImageToTabBackground": {
+    "message": "Determines if the image should be opened in a background tab or foreground tab.",
+    "description": "Determines if the image should be opened in a background tab or foreground tab."
   },
   "settingDescriptionSearchEngineURL": {
     "message": "The URL to query a search by appending the search text to the end.",
