Added new action OpenImage

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -549,6 +549,10 @@
     "message": "Open link",
     "description": "Open link"
   },
+  "actionNameOpenImage": {
+    "message": "Open image",
+    "description": "Open image"
+  },
   "actionNameLinkToBookmark": {
     "message": "Link to bookmark",
     "description": "Link to bookmark"
@@ -768,6 +772,10 @@
   "actionDescriptionOpenLink": {
     "message": "Opens either a selected link, or the link where the gesture started.",
     "description": "Opens either a selected link, or the link where the gesture started."
+  },
+  "actionDescriptionOpenImage": {
+    "message": "Opens the image where the gesture started. (View Image)",
+    "description": "Opens the image where the gesture started. (View Image)"
   },
   "actionDescriptionLinkToBookmark": {
     "message": "Saves either a selected link, or the link where the gesture started, as a bookmark.",
