--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -290,9 +290,9 @@
     "message": "Open empty tab",
     "description": "Open empty tab"
   },
-  "settingNameImageToTabBackground": {
-    "message": "Open image in a background tab",
-    "description": "Open image in a background tab"
+  "settingNameFocusImageToTab": {
+    "message": "Focus opened image tab",
+    "description": "Focus opened image tab"
   },
   "settingNameRemovePinnedTabs": {
     "message": "Remove pinned tabs",
@@ -323,9 +323,9 @@
     "message": "Determines if an empty tab should be opened if no URL was selected.",
     "description": "Determines if an empty tab should be opened if no URL was selected."
   },
-  "settingDescriptionImageToTabBackground": {
-    "message": "Determines if the image should be opened in a background tab or foreground tab.",
-    "description": "Determines if the image should be opened in a background tab or foreground tab."
+  "settingDescriptionFocusImageToTab": {
+    "message": "Determines if the opened tab containing the image should gain focus or not.",
+    "description": "Determines if the opened tab containing the image should gain focus or not."
   },
   "settingDescriptionSearchEngineURL": {
     "message": "The URL to query a search by appending the search text to the end.",
